Switched config to operating on a per object basis, Improved DB class.

--- a/Iguana/Config.ini
+++ b/Iguana/Config.ini
@@ -1,8 +1,10 @@
-[Framework_Router]
-base_url = http://localhost/MVC-Things/Public/index.php
 [Framework_Database]
 driver = mysql
 host = localhost
 dbname = db
 user = root
 password =
+[Framework_Router]
+base_url = http://localhost/MVC-Things/Public/index.php
+default_controller = Index
+default_method = index
