--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
 
     "require": {
         "zetacomponents/base": "dev-master",
-        "zetacomponents/configuration": "1.3.5"
+        "zetacomponents/configuration": "1.3.5",
+        "davewid/peyote": "0.6.*"
     },
 
     "config": {
