--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "require": {
         "zetacomponents/base": "dev-master",
         "zetacomponents/configuration": "1.3.5",
-        "davewid/peyote": "0.6.*"
+        "davewid/peyote": "0.6.*",
+        "tomverran/di": "dev-master"
     },
 
     "config": {
