--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,10 @@
     "require": {
         "zetacomponents/base": "dev-master",
         "zetacomponents/configuration": "1.3.5",
+        "kriswallsmith/assetic": "1.2.*@dev",
         "davewid/peyote": "0.6.*",
-        "tomverran/di": "dev-master"
+        "tomverran/di": "dev-master",
+        "jenwachter/html-form": "dev-master"
     },
 
     "config": {
