--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     },
 
     "require": {
+        "symfony/http-kernel": "dev-master",
         "zetacomponents/base": "dev-master",
         "zetacomponents/configuration": "1.3.5",
         "kriswallsmith/assetic": "1.2.*@dev",
