--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     },
 
     "require": {
-        "symfony/http-kernel": "dev-master",
+        "symfony/http-kernel": "2.6.*",
         "zetacomponents/base": "dev-master",
         "zetacomponents/configuration": "1.3.5",
         "davewid/peyote": "0.6.*",
