use parameter-resolver

--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "zetacomponents/configuration": "1.3.5",
         "davewid/peyote": "0.6.*",
         "tomverran/di": "dev-master",
-        "tomverran/form": "dev-master"
+        "tomverran/form": "dev-master",
+        "tomverran/parameter-resolver": "dev-master"
     },
 
     "config": {
